# cruft

./: CLAUDE.md  README.md
crs/: Cargo.toml  TODO.md  claude.md
crs/crates/crs-client/: Cargo.toml  example-config.toml
crs/crates/crs-client/src/: lib.rs  main.rs
crs/crates/crs-common/: Cargo.toml
crs/crates/crs-common/src/: lib.rs
crs/crates/crs-server/: Cargo.toml  example-check-config.toml
crs/crates/crs-server/src/: api.rs  main.rs  registry.rs  web.rs
crs/crates/crs-server/tests/: check_integration_test.rs  integration_test.rs
crs/crs-client/: example-config.toml
crs/crs-client/src/: lib.rs  main.rs
crs/crs-common/src/: lib.rs
crs/crs-server/src/: api.rs  lib.rs  main.rs  registry.rs  web.rs
crs/crs-server/tests/: check_integration_test.rs  integration_test.rs
oxmon/: .gitignore  CLAUDE.md  Cargo.toml  README.md  hosts.txt
oxmon/oxmon-cli/: Cargo.toml
oxmon/oxmon-cli/src/: main.rs
oxmon/oxmon-common/: Cargo.toml
oxmon/oxmon-common/src/: lib.rs
oxmon/oxmon-core/: Cargo.toml
oxmon/oxmon-core/src/: config.rs  lib.rs  monitor.rs
oxmon/oxmon-db/: Cargo.toml
oxmon/oxmon-db/src/: lib.rs
oxmon/oxmon-server/: Cargo.toml
oxmon/oxmon-server/src/: api.rs  main.rs  web.rs
oxping/: Cargo.toml
oxping/src/: main.rs
