[workspace]
members = [
    "crs-server",
    "crs-client",
    "crs-common",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
authors = ["Oxide Computer Company"]

[workspace.dependencies]
# Shared dependencies across crates
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11", features = ["serde", "v4", "v5"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "2.0"

# Server dependencies
dropshot = "0.13"

# Client dependencies
reqwest = { version = "0.12", features = ["json"] }
