[package]
name = "crs-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
test-utils = []

[dependencies]
crs-common = { path = "../crs-common" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
dropshot.workspace = true
http = "1.2"
clap = { version = "4.5", features = ["derive"] }
hostname = "0.4"

[dev-dependencies]
reqwest.workspace = true
crs-server = { path = ".", features = ["test-utils"] }
